bit_roles_tests/tests/compile_fail/non_enum_unchecked.rs
use bit_roles::BitRoleUnchecked;

#[derive(Debug, BitRoleUnchecked, Copy, Clone)]
struct Role {}

fn main() {}
