bit_roles_tests/tests/compile_fail/non_enum_unchecked.stderr
error: This macro can only be used with enums.
 --> tests/compile_fail/non_enum_unchecked.rs:3:17
  |
3 | #[derive(Debug, BitRoleUnchecked, Copy, Clone)]
  |                 ^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `BitRoleUnchecked` (in Nightly builds, run with -Z macro-backtrace for more info)
